[metadata]
name = rest_client
version = 1.0.0
summary = REST/JSON client based on Requests
description-file = README.rst
requires-dist = 
	requests

[files]
packages = 
	rest_client

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[noah]
public = 0

[nosetests]
with-xcoverage = 1
with-xunit = 1
cover-package = rest_client
cover-erase = 1

[pylama]
linters = mccabe,pep257,pyflakes,pep8
path = rest_client
format = pep8

[pylama:rest_client/tests.py]
ignore = D

